--- a/src/App.css
+++ b/src/App.css
@@ -1,153 +1,69 @@
 #root {
-  width: 100%;
-  max-width: 1200px;
-  min-width: 1150px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.NavBar {
-  background-color: rgb(76, 43, 226);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  border-radius: 8px;
-  height: 100%;
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-.NavDiv {
-  width: 33%;
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.NavTitle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
 }
 
-.NavCart {
-  text-align: right;
-  padding: 0 10px;
+.card {
+  padding: 2em;
 }
 
-.NavUser {
-  text-align: left;
-  padding: 0 10px;
-}
-
-.GroceriesApp-Container {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-
-  /* max-width: 800px; */
-  /* border: 1px solid white; */
-}
-
-.CartContainer {
-  width: 25%;
-  justify-content: center;
-
-  /* position: sticky; */
-  /* top: 0; Adjust this value as needed */
-  /* max-height: 100vh; Ensure it doesn't exceed the viewport height */
-  /* overflow-y: auto; Add scroll if content exceeds the container height */
-
-  /* border: 1px solid white; */
-}
-
-.CartCard {
-  display: flex;
-  /* flex-direction: column; */
-  justify-content: space-around;
-  align-items: center;
-  /* flex-wrap: wrap; */
-  border: 2px wheat solid;
-  border-radius: 10px;
-  margin: 10px;
-  padding: 5px;
-  background-color: rgb(43, 48, 54);
-}
-
-.CartCardInfo {
-  /* display: flex;
-  justify-content: space-around; */
-  width: 50%;
-}
-
-.ProductsContainer {
-  width: 75%;
-  max-width: 800px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  /* border: 1px solid white; */
+.read-the-docs {
+  color: #888;
 }
 
 .ProductCard {
-  width: 20%;
-  border: 2px wheat solid;
+  border: 1px white solid;
   border-radius: 10px;
+  padding: 75px;
   margin: 10px;
-  padding: 5px;
+  width: 150px;
+
 }
 
-.ProductQuantityDiv {
+.productCardContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
-.QuantityBtn {
+.Header {
+  background-color: purple;
+  height: 100px;
+  width: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 25px;
-  height: 25px;
-  border: 1px solid white;
-  border-radius: 50%;
-  cursor: pointer;
-  margin: 0 5px;
-}
-.QuantityBtn:hover {
-  background-color: rgb(76, 43, 226);
-}
-
-img {
-  height: 50px;
-  border-radius: 5px;
-}
-
-.counter-container {
-  /* border: 1px solid white; */
-  display: flex;
-  width: 70%;
-  height: 20px;
-  justify-content: space-around;
-  align-items: center;
-  margin: 5px auto;
-}
-
-.counter-button {
-  width: 15px;
-  height: 15px;
-  border: 1px solid white;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.CartListBtns {
-  display: flex;
-  justify-content: space-around;
-}
-
-.RemoveButton {
-  background-color: rgb(190, 0, 0);
-}
-
-#BuyButton {
-  background-color: green;
-  width: 50%;
+  gap: 50px;
+  
 }
